<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="30dp"
        android:background="@drawable/cl_style"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/win"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20sp"
        android:fontFamily="@font/averia_sans_libre_light"
        android:gravity="center"
        android:text="@string/exit_text"
        android:textAlignment="center"
        android:textColor="@color/winColorText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/exit"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_exit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/btn"
        android:fontFamily="@font/averia_sans_libre_light"
        android:text="@string/yes"
        android:textColor="@color/winColorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@id/no_exit"
        app:layout_constraintHorizontal_bias="0.224"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no_exit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="@drawable/btn"
        android:fontFamily="@font/averia_sans_libre_light"
        android:gravity="center"
        android:text="@string/no"
        android:textColor="@color/winColorText"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/yes_exit"
        app:layout_constraintTop_toTopOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>